Increase font size

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -857,8 +857,8 @@ select {
   height: 7rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -958,6 +958,10 @@ select {
 }
 
 @media (min-width: 1024px) {
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1280px) {
