--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -570,6 +570,20 @@ select {
           color-adjust: exact;
 }
 
+[type='file'] {
+  background: unset;
+  border-color: inherit;
+  border-width: 0;
+  border-radius: 0;
+  padding: 0;
+  font-size: unset;
+  line-height: inherit;
+}
+
+[type='file']:focus {
+  outline: 1px auto -webkit-focus-ring-color;
+}
+
 @font-face {
   font-family: 'Inter';
 
