Add maskView and setEditable

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -874,6 +874,10 @@ select {
          url("https://justnote.cc/static/media/Inter-BlackItalic.c769882b.woff") format("woff");
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgba(229, 231, 235, var(--tw-border-opacity));
@@ -986,6 +990,17 @@ select {
 .placeholder-gray-500::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgba(107, 114, 128, var(--tw-placeholder-opacity));
+}
+
+.fixed {
+  position: fixed;
+}
+
+.inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
 
 .resize {
