--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1059,6 +1059,11 @@ select {
   background-color: transparent;
 }
 
+.bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+
 .px-1\.5 {
   padding-left: 0.375rem;
   padding-right: 0.375rem;
