--- a/tailwind.css
+++ b/tailwind.css
@@ -3,157 +3,189 @@
 @tailwind utilities;
 
 @layer base {
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 100;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-Thin.5b7f1750.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-Thin.2a24f83a.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 100;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-ThinItalic.626503a6.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-ThinItalic.823c319a.woff") format("woff");
+
+  @supports (font-variation-settings: normal) {
+    @font-face {
+      font-family: 'Inter var';
+      font-style: normal;
+      font-weight: 100 900;
+      font-display: swap;
+      font-named-instance: 'Regular';
+      src: url("https://justnote.cc/static/media/Inter-roman.var.ba4caefcdf5b36b438db.woff2") format("woff2");
+    }
+    @font-face {
+      font-family: 'Inter var';
+      font-style: italic;
+      font-weight: 100 900;
+      font-display: swap;
+      font-named-instance: 'Italic';
+      src: url("https://justnote.cc/static/media/Inter-italic.var.30807be7abc48ba8c73c.woff2") format("woff2");
+    }
   }
 
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 200;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-ExtraLight.0a26b1ef.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-ExtraLight.9a8c0250.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 200;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-ExtraLightItalic.cca8e7e8.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-ExtraLightItalic.dd7136ac.woff") format("woff");
+  @supports not (font-variation-settings: normal) {
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 100;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-Thin.fff2a096db014f6239d4.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-Thin.29b9c616a95a912abf73.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 100;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-ThinItalic.bf213704dce6b437ede4.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-ThinItalic.bae95eb2f889c797e435.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 200;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-ExtraLight.72505e6a122c6acd5471.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-ExtraLight.c4248615291a9e8f1fb7.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 200;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-ExtraLightItalic.5c7d7d6deb1d2ec8d48c.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-ExtraLightItalic.170dddfca278d3c2ad4a.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 300;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-Light.2d5198822ab091ce4305.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-Light.994e34451cc19ede31d3.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 300;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-LightItalic.f86952265d7b0f02c921.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-LightItalic.ef9f65d91d2b0ba9b2e4.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-Regular.c8ba52b05a9ef10f4758.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-Regular.8c206db99195777c6769.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 400;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-Italic.cb10ffd7684cd9836a05.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-Italic.890025e726861dba417f.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 500;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-Medium.293fd13dbca5a3e450ef.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-Medium.9053572c46aeb4b16caa.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 500;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-MediumItalic.085cb93e613ba3d40d2b.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-MediumItalic.3d0107dd43d0101274d3.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 600;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-SemiBold.b5f0f109bc88052d4000.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-SemiBold.cca62d21c8c555c392e5.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 600;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-SemiBoldItalic.d9467ee321a8f38aefff.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-SemiBoldItalic.463bdbfb28abad0fa6df.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 700;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-Bold.ec64ea577b0349e055ad.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-Bold.93c1301bd9f486c573b3.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 700;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-BoldItalic.2d26c56a606662486796.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-BoldItalic.b376885042f6c961a541.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 800;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-ExtraBold.cbe0ae49c52c920fd563.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-ExtraBold.d0fa3bb2b7c9063dc594.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 800;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-ExtraBoldItalic.535a6cf662596b3bd6a6.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-ExtraBoldItalic.6ab17abedc4d3f140953.woff") format("woff");
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style:  normal;
+      font-weight: 900;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-Black.15ca31c0a2a68f76d2d1.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-Black.c6938660eec019fefd68.woff") format("woff");
+    }
+    @font-face {
+      font-family: 'Inter';
+      font-style:  italic;
+      font-weight: 900;
+      font-display: swap;
+      src: url("https://justnote.cc/static/media/Inter-BlackItalic.cb2a7335650c690077fe.woff2") format("woff2"),
+           url("https://justnote.cc/static/media/Inter-BlackItalic.ca1e738e4f349f27514d.woff") format("woff");
+    }
   }
 
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-Light.ab15890d.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-Light.3ee890bd.woff") format("woff");
+  html {
+    font-family: "Inter", theme(fontFamily.sans);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
   }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 300;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-LightItalic.c0c6857d.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-LightItalic.b199a1a0.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-Regular.26a30a5f.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-Regular.e148c4a1.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 400;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-Italic.b89e547a.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-Italic.d3b5fcca.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 500;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-Medium.d0a58d95.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-Medium.eec0ea57.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 500;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-MediumItalic.dd1448de.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-MediumItalic.77fc6c7d.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 600;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-SemiBold.2244d96c.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-SemiBold.d2e3b0e2.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 600;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-SemiBoldItalic.3c66f84b.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-SemiBoldItalic.349f63a5.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-Bold.df60e0aa.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-Bold.828b5dfc.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 700;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-BoldItalic.30352075.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-BoldItalic.6b5fde51.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 800;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-ExtraBold.3e71093b.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-ExtraBold.00e1fde4.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 800;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-ExtraBoldItalic.c437ff9c.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-ExtraBoldItalic.941baf7c.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 900;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-Black.768169b1.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-Black.7bb62343.woff") format("woff");
-  }
-  @font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 900;
-    font-display: swap;
-    src: url("https://justnote.cc/static/media/Inter-BlackItalic.71da97fd.woff2") format("woff2"),
-         url("https://justnote.cc/static/media/Inter-BlackItalic.c769882b.woff") format("woff");
+  @supports (font-variation-settings: normal) {
+    html {
+      font-family: "Inter var", theme(fontFamily.sans);
+    }
   }
 }
 
