--- a/css/ckeditor.css
+++ b/css/ckeditor.css
@@ -481,6 +481,10 @@
   display: none;
 }
 
+.ck-content .todo-list li {
+  margin-bottom: 0;
+}
+
 .ck-editor__editable.ck-content .todo-list .todo-list__label>span[contenteditable=false]>input {
   background-color: var(--jn-editor-white);
 }
